Fixed spacing.

--- a/css/core.css
+++ b/css/core.css
@@ -69,9 +69,10 @@ nav li{
 	font-weight: 300;
 	color: #888;
 	font-style: italic;
-	-webkit-animation: pulsate 3s ease-in-out 0s infinite alternate;
+	/*-webkit-animation: pulsate 3s ease-in-out 0s infinite alternate;
 	-moz-animation: pulsate 3s ease-in-out 0s infinite alternate;
 	animation: pulsate 3s ease-in-out 0s infinite alternate;
+	*/
 }
 /* ------------------------ Arrow Content ------------------------- */
 #continue-arrow-wrapper{
@@ -298,7 +299,7 @@ nav li{
 }
 #ways .middle .how-it-works{
 	float: left;
-	margin: 50px 0 0 0;
+	margin: 10px 0 0 0;
 	width: 100%;
 }
 #ways .middle .how-it-works ul.steps{
@@ -388,7 +389,6 @@ nav li{
 #personalize .middle a:active{
 	text-decoration: none;
 	color: #999;
-	border-bottom: 1px solid #999;
 	padding-bottom: 2px;
 	font-weight: 400;
 }
@@ -533,7 +533,8 @@ footer{
 footer ul#footer-wrapper{
 	margin: 15px auto;
 	padding:0;
-	width:800px;
+	width: 100%;
+	max-width: 650px;
 }
 footer ul#footer-wrapper li{
 	display: inline-block;
@@ -867,11 +868,6 @@ footer ul#footer-wrapper li a:hover{
 #personalize .middle #mc_embed_signup h1{
 
 }
-
-
-
-
-
 }
 @media only screen and(max-width: 1000px){
 #ways .middle {
@@ -1221,24 +1217,14 @@ footer ul#footer-wrapper li a:hover{
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
-
-
-
 }
-
-
-@media only screen and (max-height: 680px){
+@media screen and (max-height: 1000px){
 /* ------------------------ About Us Sections -------------------------- */
-#about-us .middle{
-}
-
-@media only screen and (max-height: 1000px){
-/* ------------------------ About Us Sections -------------------------- */
-
 #about-us {
 	height:auto;
 	min-height:auto;
 	padding: 70px 0;
+	background: #ff0000;
 }
 #about-us .middle{
 	position: relative;
@@ -1265,8 +1251,22 @@ footer ul#footer-wrapper li a:hover{
 #about-us .middle .right-content .time-font{
 	font: 40px 'Didot',sans-serif;
 }
-
-
+#ways{
+	height:auto;
+	min-height:auto;
+	padding: 70px 0;
+}
+#ways .middle{
+	position: relative;
+	height:auto;
+	margin:0 auto;
+	padding:0;
+	top:auto;
+	left: auto;
+}
+#ways .middle .how-it-works{
+	margin: 10px 0 0 0;
+}
 
 }
 
